- scrooge-generator: Fix pathological case for self-referencing
  types with Java generation. ``RB_ID=880813``

4.11.0
------

- scrooge-generator: Add support for self-referencing types from 
  `pinsri` via https://github.com/twitter/scrooge/pull/244 
  ``RB_ID=873802``

- scrooge: Remove unmaintained bin/ directory. ``RB_ID=873411``

4.10.0
------

No Changes

4.9.0
------

No Changes

4.8.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

- scrooge-sbt-plugin: Allow scrooge to build bindings for more than one
  language. To reflect this, `ScroogeSBT.autoImport.scroogeLanguage` has been
  renamed to `scroogeLanguages` and is now a `SettingKey[Seq[String]]`
  instead of a `SettingKey[String].` ``RB_ID=846198``

- Builds are now only for Java 8 and Scala 2.11. See the
  `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
  for details. ``RB_ID=828898``


~~~~~

4.7.0
-----

- scrooge-core, scrooge-generator: `c.t.scrooge.ThriftEnum` now includes an
  `originalName` method which represents the name as defined in the Thrift
  IDL file. ``RB_ID=820075``

4.6.0
-----

- scrooge-ostrich: Removed scrooge-ostrich module
- scrooge-runtime: Deleted unnecessary scrooge-runtime module
- scrooge-generator: Remove broken experimental-java generator.

4.5.0
-----

- scrooge: Improve implementation of service#FunctionType

4.4.0
-----

- NOT RELEASED

4.3.0
-----

- scrooge: Rename __ServiceIface to BaseServiceIface
- scrooge: Add methods for converting between function and service implementations of ThriftMethods.

4.2.0
-----

- bump finagle version to 6.30

4.1.0
-----

- bump finagle version to 6.29

4.0.0
-----

- scrooge: Scrooge 4.0.0 includes backward compatibility patches for Finagle service per endpoint generation. This allows using Thrift endpoints as Finagle Services and combining them with Filters.

3.x
-----

3.20.0
------

- scrooge: Generate a finagle Service per thrift method (Service interface)

3.19.0
------